<resources>
    <string name="app_name">CameraTest</string>
    <string name="blank"> </string>
    <string name="action_exit_app">Exit</string>
    <string name="action_settings">Settings</string>
    <string name="action_wifi_settings">WiFi Settings</string>
    <string name="section_format">%1$d</string>
    <string name="connect">Try connect</string>
    <string name="shutter">Execute Shutter</string>
    <string name="drive_af">Drive AF</string>
    <string name="unlock_focus">Focus Unlock</string>
    <string name="change_film_simulation">Change Film Simulation</string>
    <string name="change_image_aspect">Change Image Aspect</string>
    <string name="label_button1">1</string>
    <string name="label_button2">2</string>
    <string name="label_button3">3</string>
    <string name="label_button4">4</string>
    <string name="label_button5">5</string>
    <string name="action_up">Up</string>
    <string name="action_down">Down</string>
    <string name="action_reset">Reset Connection</string>
    <string name="action_disconnect">Disconnect</string>

    <string name="pref_cat_application_control">App. Control</string>
    <string name="pref_exit_power_off">Exit Application(and Camera OFF)</string>
    <string name="pref_connection_method">Connection Method</string>
    <string name="pref_cat_camera">Camera</string>
    <string name="pref_capture_both_camera_and_live_view">Capture both camera and Live View</string>

    <string name="pref_cat_others">Others</string>

    <string name="pref_cat_gokigen">GOKIGEN</string>
    <string name="pref_instruction_manual">Instructions</string>
    <string name="pref_privacy_policy">Privacy Policy</string>

    <string name="pref_degug_info">Debug Information</string>
    <string name="pref_summary_debug_info">LogCat Information</string>

    <string name="pref_fujix_display_camera_view">Use Camera Display</string>
    <string name="pref_fujix_display_camera_view_summary">Shows liveview screen both camera and smartphone.</string>

    <string name="pref_fujix_focus_xy">Number of Focus Point X,Y (default: 7,7)</string>
    <string name="pref_summary_fujix_focus_xy"> </string>

    <string name="pref_fujix_liveview_wait">Liveview receive wait (default: 80)</string>
    <string name="pref_summary_fujix_liveview_wait"> </string>

    <string name="pref_special_thanks">Special Thanks to : fuji-cam-wifi-tool</string>


    <string name="dialog_title_confirmation">Confirmation</string>
    <string name="dialog_positive_execute">OK</string>
    <string name="dialog_negative_cancel">Cancel</string>

    <string name="dialog_confirm_title_output_log">Share debug log</string>
    <string name="dialog_confirm_message_output_log">Share the debug log, OK?</string>

    <string name="action_refresh">Refresh</string>
    <string name="finish_refresh">Finished Refresh</string>

    <string name="dialog_message_power_off">Power Off</string>

    <string name="query_capability">Query Camera Capability</string>
</resources>
